# meyers-scraper

./: .flake8  .gitignore  LICENSE  README.md  app.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: .env.example
deploy/: Dockerfile  docker-compose.yml
docs/: API_README.md  CHANGELOG.md  CONTRIBUTING.md  MCP_README.md  SECURITY.md
scripts/: run_tests.py  setup.sh  start_api.sh  start_mcp.sh
src/: __init__.py  client.py  display.py  models.py  processor.py
tests/: test_api.py  test_core.py  test_mcp.py
